--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
           placeholder="Ex: Vocabulário Avançado, Expressões Idiomáticas, etc.">
       </div>
       <input type="text" class="form-control mb-2" id="admin-word" placeholder="Pergunta">
-      <input type="text" class="form-control mb-2" id="admin-correct" placeholder="Resposta Correta">
+      <input type="text" class="form-control mb-2" id="admin-correct" placeholder="Resposta use , se for múltiplas">
       <input type="text" class="form-control mb-2" id="admin-options" placeholder="até 20 opções separadas por , ">
       <button class="btn btn-success" onclick="addWord()">Adicionar Palavra</button>
     </div>
